--- a/rai_build.yml
+++ b/rai_build.yml
@@ -1,6 +1,8 @@
 rai:
   version: 0.1
-  image: nvidia/cuda:8.0-devel-ubuntu16.04
+  # image: myimage/word2vec:8.0
+  # image: c3sr/scope:amd64-cuda92-latest
+  image: cwpearson/ece408_mxnet_docker:amd64-gpu-2018sp-latest
 resources:
   cpu:
     architecture: amd64
@@ -9,16 +11,28 @@ resources:
     count: 1 # tell the system that you're using a gpu
   network: false
 commands:
+  # build_image:
+  #   image_name: myimage/word2vec:8.0
+  #   dockerfile: "./Dockerfile"
+  #   no_cache: true
   build:
     - nvidia-smi
     - ls /src
 
-    # - nvcc -std=c++11 /src/example.cu
-    # - ./a.out analogy /src/pretrained_models/GloVe/vectors_150.txt 150 king man woman
-    # - ./a.out analogy /src/pretrained_models/GloVe/vectors_150.txt 150 france paris berlin
-    # - ./a.out analogy /src/pretrained_models/GloVe/vectors_150.txt 150 france paris beijing
+    # - ls -a
+    # - bench --benchmark_list_tests
+    # - cmake /src/microbench -DCONFIG_USE_HUNTER=OFF -DSUGAR_ROOT=${SUGAR_ROOT} -DCUB_ROOT=${CUB_ROOT}
+    # - chmod +x /src/commands.sh && ./src/commands.sh
+    # - chmod +x /src/commands.sh
+    # - /src/commands.sh
 
-    - nvcc -std=c++11 /src/cuBlas.cu -lcublas -o cuBlas
-    - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt 150 king man woman
-    - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt 150 france paris berlin
-    - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt 150 france paris beijing
+    - nvcc -std=c++11 /src/main.cu -lcublas -o cudaw2v
+    # - nvprof ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt analogy_data/capital-common-countries.txt
+    - nvprof ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt king man woman
+    - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris berlin
+    - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris beijing
+    #
+    # - nvcc -std=c++11 /src/cuBlas.cu -lcublas -o cuBlas
+    # - nvprof ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt king man woman
+    # - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt france paris berlin
+    # - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt france paris beijing
