--- a/rai_build.yml
+++ b/rai_build.yml
@@ -27,12 +27,15 @@ commands:
     # - /src/commands.sh
 
     - nvcc -std=c++11 /src/main.cu -lcublas -o cudaw2v
-    # - nvprof ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt analogy_data/capital-common-countries.txt
-    - nvprof ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt king man woman
-    - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris berlin
-    - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris beijing
-    #
-    # - nvcc -std=c++11 /src/cuBlas.cu -lcublas -o cuBlas
-    # - nvprof ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt king man woman
-    # - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt france paris berlin
-    # - ./cuBlas analogy /src/pretrained_models/GloVe/vectors_150.txt france paris beijing
+    # - nvprof ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt king man woman
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris berlin
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt france paris beijing
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt illinois chicago houston
+
+    - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/capital-common-countries.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/city-in-state.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/currency.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/family.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/gram4-superlative.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/gram8-plural.txt
+    # - ./cudaw2v analogy /src/pretrained_models/GloVe/vectors_150.txt /src/analogy_data/gram9-plural-verbs.txt
